--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -10,6 +10,7 @@
 	
   <groupId>com.silverpeas.core</groupId>
   <artifactId>ejb-core</artifactId>
+  <version>${project.parent.version}</version>
   <packaging>pom</packaging>
   <name> EJB Core</name>
 
