--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -10,6 +10,7 @@
 
   <groupId>com.silverpeas.core</groupId>
   <artifactId>war-core</artifactId>
+  <version>${project.parent.version}</version>
   <packaging>war</packaging>
   <name>Core Webapp</name>
 
