--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -11,6 +11,7 @@
   <groupId>com.silverpeas.core</groupId>
   <artifactId>web-core</artifactId>
   <packaging>jar</packaging>
+  <version>${project.parent.version}</version>
   <name>Web Core Library</name>
 
   <dependencies>
