Preparing poms for release
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@615 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/admin/pom.xml
+++ b/ejb-core/admin/pom.xml
@@ -6,12 +6,11 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>admin</artifactId>
-  <version>${parent.version}</version>
+  <version>${project.parent.version}</version>
   <packaging>ejb</packaging>
   <name>EJB Admin</name>
 </project>
