--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.silverpeas</groupId>
@@ -9,9 +8,9 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</connection>
-    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
-    <url>https://repository.silverpeas.org/redmine/repositories/show/silverpeas-core</url>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/tags/core-1.0-RC1</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/tags/core-1.0-RC1</developerConnection>
+    <url>https://repository.silverpeas.org/redmine/repositories/show/silverpeas-core/tags/core-1.0-RC1</url>
   </scm>
 
   <repositories>
@@ -27,7 +26,7 @@
   
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-RC1</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
