--- a/config-core/pom.xml
+++ b/config-core/pom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>1.0-RC2-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 	
   <groupId>com.silverpeas.core</groupId>
   <artifactId>config-core</artifactId>
-  <version>1.0-RC2-SNAPSHOT</version>
+  <version>${project.parent.version}</version>
   <packaging>pom</packaging>
   <name>Configuration Core</name>
 
