Updating the documentation
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@685 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -85,4 +85,9 @@
     <module>war-core</module>
     <module>config-core</module>
   </modules>
+
+  <properties>
+    <installer_version>1.0-RC1</installer_version>
+  </properties>
+
 </project>
