closes feature #168 and removes some Java warnings
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@707 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -208,6 +208,11 @@
     <servlet-class>com.silverpeas.jobDomainPeas.servlets.JobDomainPeasRequestRouter</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>JobDomainPeasAjaxServlet</servlet-name>
+    <display-name>JobDomainPeasAjaxServlet</display-name>
+    <servlet-class>com.silverpeas.jobDomainPeas.servlets.JobDomainPeasAjaxServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>JobManagerPeasRequestRouter</servlet-name>
     <display-name>JobManagerPeasRequestRouter</display-name>
     <servlet-class>com.silverpeas.jobManagerPeas.servlets.JobManagerPeasRequestRouter</servlet-class>
@@ -594,6 +599,10 @@
   <servlet-mapping>
     <servlet-name>JobDomainPeasRequestRouter</servlet-name>
     <url-pattern>/RjobDomainPeas/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>JobDomainPeasAjaxServlet</servlet-name>
+    <url-pattern>/JobDomainPeasAJAXServlet/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>JobManagerPeasRequestRouter</servlet-name>
