features #171, Add new feature for INRA. This feature allow admin user to manage space/component order. We can now display spaces after components or before components. Admin user can also manage custom display configuration for each space. There is a global key configuration inside "SILVERPEAS_HOME/properties/com/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties" file. Key value are :  - BEFORE  - AFTER  - TODEFINE
 BEFORE property display spaces before components
 AFTER property display components before spaces
 TODEFINE property let admin user set this property for each space using space manager GUI.
Default key value is BEFORE.

ebonnet

git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@710 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
@@ -36,3 +36,9 @@ UseProfileInheritance=true
 
 UsePublicParameter=true
 UseComponentsCopy=true
+
+# Display position configuration
+DisplaySpacesBeforeComponents=BEFORE
+DisplaySpacesAfterComponents=AFTER
+DisplaySpacesToDefine=TODEFINE
+DisplaySpacePositionConfiguration=BEFORE
