--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -107,6 +107,12 @@ JSPP.PlaceLast = Déplacer en fin
 JSPP.ComponentOrder = Déplacement du service
 JSPP.ComponentPlace = Déplacement avant le composant
 
+// order space, component
+JSPP.SpacePosition = Display component
+JSPP.NoSpacePosition = Select position
+JSPP.SpacePositionFirst = After space
+JSPP.SpacePositionLast = Before space
+
 // Copy/Cut/Paste component
 JSPP.CopyOf = Copy of 
 
