--- a/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
@@ -46,6 +46,9 @@ connecteurJDBC_publisher = publisher
 connecteurJDBC_writer = user
 connecteurJDBC_reader = user
 
+classifieds_admin = admin
+classifieds_publisher = publisher
+
 formManager_admin = Administrator
 formManager_publisher = Designer
 formManager_writer = SenderReceiver
@@ -86,10 +89,18 @@ mailinglist_publisher = moderator
 mailinglist_writer = reader
 mailinglist_reader = reader
 
+myDB_admin = admin
+myDB_publisher = publisher
+myDB_user = user
+
 newsEdito_admin = admin
 newsEdito_publisher = publisher
 newsEdito_writer = publisher
 newsEdito_reader = user
+
+organizationchart_admin = admin
+organizationchart_publisher = publisher
+organizationchart_user = user
 
 outlook_admin = admin
 outlook_publisher = user
