Moving spring configuration files to the directory config
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@737 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -73,7 +73,7 @@
     <dispatcher>INCLUDE</dispatcher>
   </filter-mapping>
   <filter-mapping>
-    <!-- Login Filter Mapping-->
+    <!-- Login Filter Mapping -->
     <filter-name>LoginFilter</filter-name>
     <servlet-name>LoginServlet</servlet-name>
   </filter-mapping>
@@ -300,7 +300,7 @@
     <servlet-class>com.silverpeas.jcrutil.servlets.RepositoryAccessServlet</servlet-class>
     <init-param>
       <param-name>configuration</param-name>
-      <param-value>/WEB-INF/spring-jcr.xml /WEB-INF/spring-jdbc-datasource.xml /WEB-INF/spring-pdcPeas.xml</param-value>
+      <param-value>/WEB-INF/config/spring-jcr.xml /WEB-INF/config/spring-jdbc-datasource.xml /WEB-INF/config/spring-pdcPeas.xml</param-value>
       <description>Spring JCR configuration file</description>
     </init-param>
     <load-on-startup>1</load-on-startup>
