--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle.properties
@@ -21,6 +21,12 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-IconsPath = /util/viewGenerator/icons
-Pagination.NumberOfPagesAround=10
-Pagination.DisplayTotalNumberOfPages=true
+GEF.pagination.page = Page
+GEF.pagination.pageOn = &nbsp;sur&nbsp;
+GEF.pagination.firstPage = Première page
+GEF.pagination.previousPage = Page précédente
+GEF.pagination.nextPage = Page suivante
+GEF.pagination.lastPage = Dernière page
+GEF.pagination.gotoPage = Aller à la page 
+GEF.pagination.jumptoPage = Aller directement à la page...
+GEF.pagination.jumper = Page...
