i removed my email from default base
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@824 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/beans/admin/admin.properties
@@ -51,7 +51,7 @@ WaAdminPswd  = @AdminDatabasePasswd@
 # Login password administrator
 AdministratorLogin = admin
 AdministratorPassword = admin
-AdministratorEMail = david.lesimple@oevo.com
+AdministratorEMail = 
 
 # Session server connexion
 # UseSessionServer = 0
