preparing the new release
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@828 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
   </modules>
 
   <properties>
-    <installer_version>1.0-RC1</installer_version>
+    <installer_version>${project.version}</installer_version>
   </properties>
 
 </project>
