[maven-release-plugin] prepare release core-1.0-RC2
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@829 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/comment/pom.xml
+++ b/ejb-core/comment/pom.xml
@@ -5,13 +5,13 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>1.0-RC2-SNAPSHOT</version>
+    <version>1.0-RC2</version>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>comment</artifactId>
   <packaging>ejb</packaging>
-  <version>1.0-RC2-SNAPSHOT</version>
+  <version>1.0-RC2</version>
   <name>EJB Comment</name>
 	
   <dependencies>
