--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>1.0-RC2-SNAPSHOT</version>
+    <version>1.0-RC2</version>
   </parent>
 	
   <groupId>com.silverpeas.core</groupId>
