--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>1.0-RC2</version>
+    <version>1.0-RC3-SNAPSHOT</version>
   </parent>
 
   <groupId>com.silverpeas.core</groupId>
   <artifactId>war-core</artifactId>
-  <version>1.0-RC2</version>
+  <version>1.0-RC3-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>Core Webapp</name>
 
