[maven-release-plugin] rollback the release of core-1.0-RC2
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@838 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/tags/core-1.0-RC2</connection>
-    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/tags/core-1.0-RC2</developerConnection>
-    <url>https://repository.silverpeas.org/redmine/repositories/show/silverpeas-core/tags/core-1.0-RC2</url>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/core/trunk</developerConnection>
+    <url>https://repository.silverpeas.org/redmine/repositories/show/silverpeas-core</url>
   </scm>
 
   <repositories>
@@ -26,7 +26,7 @@
   
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>1.0-RC2</version>
+  <version>1.0-RC2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
