--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -22,7 +22,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 Window = com.stratelia.webactiv.util.viewGenerator.html.window.WindowWeb20V5
-BrowseBar = com.stratelia.webactiv.util.viewGenerator.html.browseBars.BrowseBarWeb20V5
+BrowseBar = com.stratelia.webactiv.util.viewGenerator.html.browseBars.BrowseBarComplete
+# BrowseBar = com.stratelia.webactiv.util.viewGenerator.html.browseBars.BrowseBarWeb20V5
 OperationPane = com.stratelia.webactiv.util.viewGenerator.html.operationPanes.OperationPaneSilverpeasV5Web20
 Button = com.stratelia.webactiv.util.viewGenerator.html.buttons.ButtonSilverpeasV5
 ButtonPane = com.stratelia.webactiv.util.viewGenerator.html.buttonPanes.ButtonPaneWA2
