--- a/config-core/src/main/config/initialize/systemSettings.properties
+++ b/config-core/src/main/config/initialize/systemSettings.properties
@@ -34,3 +34,4 @@ javax.net.ssl.trustStorePassword=changeit
 ssl.keystore=trustore.jks
 ssl.keystore.password=changeit
 mail.imaps.connectionpool.debug=true
+mail.smtp.ssl.enable=false
