--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
@@ -131,6 +131,7 @@ rssAgregator = com.silverpeas.rssAgregator.RssAgregatorStatistics
 webPages = com.silverpeas.webpages.WebPagesStatistics
 mailinglist = com.silverpeas.mailinglist.MailingListStatistics
 resourcesManager = com.silverpeas.resourcesmanager.ResourcesManagerStatistics
+classifieds = com.silverpeas.classifieds.ClassifiedsStatistics
 
 // pdc component class name for volume feed
 fileBoxPlus = com.stratelia.silverpeas.fileBoxPlus.FileBoxPlusStatistics
