Adding some tests for loading and saving processes
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@883 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/formtemplate/pom.xml
+++ b/ejb-core/formtemplate/pom.xml
@@ -36,5 +36,19 @@
       <groupId>ecs</groupId>
       <artifactId>ecs</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
+
+  <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources> 
+  </build>
+
 </project>
