closing feature #187 (dbbuilder scripts modified)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@888 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -261,4 +261,7 @@ GML.ExportSucceeded = Export réussi.
 GML.ExportFailed = L'export a échoué.
 GML.ExportInProgress = Export en cours...
 
+GML.DragNDropExpand = Pour déposer rapidement un fichier...
+GML.DragNDropCollapse = Fermer
 
+GML.personalSpace = Espace personnel
