Corrections for Silverpeas initalise process : * now the initialisation is done through a ServletContextListener * the initialisation classes have moved from lib-core to war-core * the filesharing is configured to be initialised correctly and visible per default
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@889 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
@@ -63,6 +63,7 @@ interestCenterPeas = /RinterestCenterPeas/jsp/
 pdcSubscriptionPeas = /RpdcSubscriptionPeas/jsp/
 importExportPeas = /RimportExportPeas/jsp/
 myLinksPeas = /RmyLinksPeas/jsp/
+fileSharing = /RfileSharing/jsp/
 webConnections = /RwebConnections/jsp/
 templateDesigner = /RtemplateDesigner/jsp/
 workflowDesigner = /RworkflowDesigner/jsp/
