--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -75,7 +75,7 @@ todoVisible =
 notificationVisible =
 interestVisible =
 favRequestVisible =
-fileSharingVisible = 
+fileSharingVisible = true
 webconnectionsVisible = true
 
 # URL aide en ligne
