The tests are running
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@899 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/versioning/pom.xml
+++ b/ejb-core/versioning/pom.xml
@@ -13,6 +13,18 @@
   <name>EJB Versioning</name>
 
   <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+    <filters>
+      <filter>src/test/filters/filters.properties</filter>
+    </filters>
+  </build>
+<!--
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -23,7 +35,7 @@
       </plugin>
     </plugins>
   </build>
-  
+  -->
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -39,9 +51,8 @@
     </dependency>
     <dependency>
       <groupId>${project.parent.groupId}</groupId>
-      <artifactId>lib-core</artifactId>
+      <artifactId>test-core</artifactId>
       <version>${project.version}</version>
-      <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
