--- a/ejb-core/versioning/src/test/resources/com/stratelia/webactiv/general.properties
+++ b/ejb-core/versioning/src/test/resources/com/stratelia/webactiv/general.properties
@@ -23,18 +23,18 @@
 #
 ApplicationURL = /silverpeas/
 
-#Nom du workspace (configuré dans repository.xml)
+#Nom du workspace (configur\u00E9 dans repository.xml)
 webdav.workspace=jackrabbit
 #Mapping de la serlet webdav sans '/'
 webdav.respository=repository
 
 # working directory for components (created with the instanciators)
-uploadsPath = c:\\tmp\\uploads
+uploadsPath=${basedir}/target/uploads
 # working directory for the search engine
-uploadsIndexPath =C:\\tmp\\indexes
+uploadsIndexPath =${basedir}/target/indexes
 removeLocksOnInit=yes
 # working directory for temporaries files
-tempPath = c:\\tmp\\uploads
+tempPath=${basedir}/target/uploads
 
 sessionTimeout = /admin/jsp/SessionTimeout.jsp
 authorisationFailed = /admin/jsp/authorisationFailed.jsp
@@ -48,7 +48,7 @@ smallLogo=/admin/jsp/icons/logo_silverpeas.gif
 smallLogoSilverBlue=icons/DomainbarSilverblue/logo.gif
 
 # advanced search with PDC
-# doit être à true ou false
+# doit \u00EAtre \u00E0 true ou false
 advancedSearchWithPDC = true
 
 # Domain visibility parameter
