closing feature #241 (generate new password)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@907 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/lookAndFeel/generalLook.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/lookAndFeel/generalLook.properties
@@ -36,8 +36,8 @@ logo =
 // Id de l'utilisateur anonyme
 anonymousId=
 
-// Activation de l'oubli de mot de passe
-forgottenPwdActive = true
+// Activation de l'oubli de mot de passe (forgottenPwdActive = personalQuestion || reinit || false)
+forgottenPwdActive = reinit
 userResetPasswordPage = /defaultResetPassword.jsp
 
 // Question personnelle (en cas d'oubli de mot de passe)
@@ -60,3 +60,12 @@ loginQuestion.count=3
 loginQuestion.1=Quelle est le nom de jeune fille de votre mère ?
 loginQuestion.2=Quelle est votre ville de naissance ?
 loginQuestion.3=Quelle est le nom de votre animal préféré ?
+
+forgottenPasswordInvalidLogin = /defaultReInitPassword.jsp?Action=InvalidLogin
+forgottenPasswordChangeAllowed = /defaultReInitPassword.jsp?Action=FirstMailSended
+forgottenPasswordChangeNotAllowed = /defaultReInitPassword.jsp?Action=ChangeNotAllowed
+forgottenPasswordReset = /defaultReInitPassword.jsp?Action=NewPasswordSended
+forgottenPasswordResetError = /defaultReInitPassword.jsp?Action=NewPasswordError
+forgottenPasswordSendMessage = 
+forgottenPasswordError = 
+forgottenPasswordLoginUrl = /Login.jsp
