--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
@@ -6,6 +6,7 @@ authentication.logon.domain = Domaine
 authentication.logon.passwordForgotten = Mot de passe oublié ?
 authentication.logon.passwordRemember = Mémoriser le mot de passe ?
 authentication.logon.loginMissing = Veuillez renseigner votre login
+authentication.logon.passwordReinit = Réinitialiser mon mot de passe...
 
 # traitement des erreurs de login
 authentication.logon.1 = Login ou mot de passe incorrect
