closing feature #197 Add user favorite space with JSP <view:tabs> renderer
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@912 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle.properties
@@ -51,3 +51,8 @@ lookSilverpeasV5.personalSpace.gallery = Mes images
 lookSilverpeasV5.personalSpace.rssAgregator = Mes flux RSS
 lookSilverpeasV5.personalSpace.kmelia = Mes documents
 lookSilverpeasV5.personalSpace.yellowpages = Mes contacts
+
+#Favorite space labels
+lookSilverpeasV5.noFavoriteSpace = Vous n'avez sélectionné aucun espace favori.
+lookSilverpeasV5.favoriteSpace.tabAll = Tous
+lookSilverpeasV5.favoriteSpace.tabBookmarks = Favoris
