--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -106,3 +106,8 @@ displayPDCFrame = true
 displayPDCInNav = false
 
 displayConnectedUsers = true
+
+# Display menu properties
+# displayUserFavoriteSpace allowed values are : DISABLE, BOOKMARKS, ALL  
+displayUserFavoriteSpace = DISABLE
+enableUFSContainsState = false
