--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -166,6 +166,12 @@
       <groupId>com.sun.jndi</groupId>
       <artifactId>providerutil</artifactId>
     </dependency>
+     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>test-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
   <build>
