--- a/web-core/src/test/resources/com/stratelia/webactiv/util/jndi.properties
+++ b/web-core/src/test/resources/com/stratelia/webactiv/util/jndi.properties
@@ -21,7 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# JNDI for JBOSS
+# JNDI for Orion
 
 CLIPBOARD_EJBHOME		= ejb/ClipboardBm
 NODEBM_EJBHOME			= ejb/NodeBm
@@ -74,9 +74,6 @@ DOCUMENTBM_EJBHOME		= ejb/DocumentBm
 BUSREMOTEACCESSBM_EJBHOME	= ejb/BusRemoteAccessBm
 ADMINBM_EJBHOME			= ejb/AdminBm
 PDCBM_EJBHOME			= ejb/PdcBm
-MYDB_EJBHOME			= ejb/MyDBBm
-TAGCLOUDBM_EJBHOME		= ejb/TagCloudBm
-NOTATIONBM_EJBHOME 		= ejb/NotationBm
 
 SILVERPEAS_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 PUBLICATION_DATASOURCE		= java:comp/env/jdbc/Silverpeas
@@ -115,30 +112,28 @@ USE_CATALOG_EJB			= java:comp/env/useCatalogEJB
 SECURITY_ADAPTER_CLASSNAME	= java:comp/env/securityAdapterClassName
 SEND_CONFIRMATION_MAIL		= java:comp/env/sendConfirmationMail
 
-ATTACHMENT_DATASOURCE		= java:/Silverpeas
-CONTAINERMANAGER_DATASOURCE	= java:/Silverpeas
-CONTENTMANAGER_DATASOURCE	= java:/Silverpeas
-CLASSIFYENGINE_DATASOURCE	= java:/Silverpeas
-PDC_DATASOURCE			= java:/Silverpeas
-ADMIN_DATASOURCE		= java:/Silverpeas
-FORMTEMPLATE_DATASOURCE		= java:/Silverpeas
-WORKFLOW_DATASOURCE		= java:/Silverpeas
-CHAT_DATASOURCE			= java:/Silverpeas
-INFOLETTER_DATASOURCE		= java:/Silverpeas
-OUTLOOK_DATASOURCE		= java:/Silverpeas
-GENERATOR_DATASOURCE		= java:/Silverpeas
-FORMDESIGNER_DB_DATASOURCE	= java:/Silverpeas
-DATABASE_DATASOURCE		= java:/Silverpeas
-PERSISTENCE_DB_DATASOURCE	= java:/Silverpeas
-WIKI_DATASOURCE			= java:/Silverpeas
+ATTACHMENT_DATASOURCE		= jdbc/Silverpeas
+CONTAINERMANAGER_DATASOURCE	= jdbc/Silverpeas
+CONTENTMANAGER_DATASOURCE	= jdbc/Silverpeas
+CLASSIFYENGINE_DATASOURCE	= jdbc/Silverpeas
+PDC_DATASOURCE			= jdbc/Silverpeas
+ADMIN_DATASOURCE		= jdbc/Silverpeas
+FORMTEMPLATE_DATASOURCE		= jdbc/Silverpeas
+WORKFLOW_DATASOURCE		= jdbc/Silverpeas
+CHAT_DATASOURCE			= jdbc/Silverpeas
+INFOLETTER_DATASOURCE		= jdbc/Silverpeas
+OUTLOOK_DATASOURCE		= jdbc/Silverpeas
+GENERATOR_DATASOURCE		= jdbc/Silverpeas
+FORMDESIGNER_DB_DATASOURCE	= jdbc/Silverpeas
+DATABASE_DATASOURCE		= jdbc/Silverpeas
+PERSISTENCE_DB_DATASOURCE	= jdbc/Silverpeas
 
 JMS_HEADER_CHANNEL		= CHANNEL
+JMS_QUEUE			= com.stratelia.silverpeas.notificationserver.jms.Queue
+JMS_FACTORY			= com.stratelia.silverpeas.notificationserver.jms.QueueConnectionFactory
 
-SILVERSTATISTICS_JMS_QUEUE	= queue/statisticsQueue
-JMS_QUEUE			= queue/notificationsQueue
-
-SILVERSTATISTICS_JMS_FACTORY	= java:/XAConnectionFactory
-JMS_FACTORY			= java:/XAConnectionFactory
+SILVERSTATISTICS_JMS_QUEUE	= com.stratelia.silverpeas.silverstatistics.jms.SilverStatisticsJMSQUEUE
+SILVERSTATISTICS_JMS_FACTORY	= com.stratelia.silverpeas.silverstatistics.jms.QueueConnectionFactory
 
 #
 # exemple pour une config jboss
@@ -158,5 +153,4 @@ JMS_FACTORY			= java:/XAConnectionFactory
 
 # withHomeFetcher, for HomeFetcher optimization (Yes, or No)
 withHomeFetcher=Yes
-
 
