--- a/web-core/src/test/resources/com/stratelia/webactiv/general.properties
+++ b/web-core/src/test/resources/com/stratelia/webactiv/general.properties
@@ -29,9 +29,9 @@ webdav.workspace=jackrabbit
 webdav.respository=repository
 
 # working directory for components (created with the instanciators)
-uploadsPath=${project.build.directory}/temp/uploads
+uploadsPath=${project.build.directory}/test-classes/uploads
 # working directory for the search engine
-uploadsIndexPath=${project.build.directory}/temp/index
+uploadsIndexPath=${project.build.directory}/test-classes/index
 removeLocksOnInit=yes
 # working directory for temporaries files
 tempPath=${project.build.directory}/temp/temp
