closing feature #142 (dynamic values in wysiwyg)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@983 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/wysiwyg/dynamicvalue/settings/dynamicValueSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/wysiwyg/dynamicvalue/settings/dynamicValueSettings.properties
@@ -21,11 +21,8 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# Wysiwyg Menus
-
-# Custom wysiwyg config file
-#Ex: configFile = http://localhost:8000/weblib/myconfig.js
-configFile = 
-# possible values for activateDynamicValue : true = activate the dynamic value functionality
-# false = disable  the dynamic value functionality. This parameter is case insensitive.
-activateDynamicValue=false
+tableName=val_dyn
+keyColumnName=keyword 
+valueColumnName=value
+startDateColumnName=start_date
+endDateColumnName=end_date
