--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle.properties
@@ -45,3 +45,4 @@ RequiredField = Obligatoire
 UploadTitle = Upload de fichier
 Valider = Valider
 Annuler = Annuler
+DynamicValues = sélectionner un mot-clé
