--- a/lib-core/src/test/resources/com/stratelia/silverpeas/wysiwyg/settings/wysiwygSettings.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/wysiwyg/settings/wysiwygSettings.properties
@@ -26,6 +26,6 @@
 # Custom wysiwyg config file
 #Ex: configFile = http://localhost:8000/weblib/myconfig.js
 configFile = 
-# possible values for activateDynamicValue : true = activate the dynamic value functionality
-# false = disable  the dynamic value functionality. This parameter is case insensitive.
+# possible values for activateDynamicValue : On = activate the dynamic value functionality
+# Off = disable  the dynamic value functionality. This parameter is case insensitive.
 activateDynamicValue=false
