[maven-release-plugin] prepare release core-1.0-RC3
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1012 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/ejb-core/authentication/pom.xml
+++ b/ejb-core/authentication/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>1.0-RC3-SNAPSHOT</version>
+    <version>1.0-RC3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>authentication</artifactId>
-  <version>1.0-RC3-SNAPSHOT</version>
+  <version>1.0-RC3</version>
   <packaging>ejb</packaging>
   <name>EJB Authentication</name>
 </project>
