--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>1.0-RC3-SNAPSHOT</version>
+    <version>1.0-RC3</version>
   </parent>
 	
   <groupId>com.silverpeas.core</groupId>
