--- a/config-core/pom.xml
+++ b/config-core/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>1.0-RC3</version>
+    <version>5.0-SNAPSHOT</version>
   </parent>
 	
   <groupId>com.silverpeas.core</groupId>
   <artifactId>config-core</artifactId>
-  <version>1.0-RC3</version>
+  <version>5.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Configuration Core</name>
 
