--- a/ejb-core/comment/pom.xml
+++ b/ejb-core/comment/pom.xml
@@ -5,13 +5,13 @@
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>1.0-RC3</version>
+    <version>5.0-SNAPSHOT</version>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>comment</artifactId>
   <packaging>ejb</packaging>
-  <version>1.0-RC3</version>
+  <version>5.0-SNAPSHOT</version>
   <name>EJB Comment</name>
 	
   <dependencies>
