Using commons-compress instead of java.util.Zip
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1065 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -88,6 +88,10 @@
       <artifactId>commons-io</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+    </dependency>
+    <dependency>
       <groupId>net.sourceforge</groupId>
       <artifactId>cryptolib</artifactId>
     </dependency>
