--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>4.0</version>
+    <version>5.0-SNAPSHOT</version>
   </parent>
 
   <scm>
