Adding a method to try to detect an encoding using some binary data
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1086 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -211,6 +211,10 @@
       <groupId>ecs</groupId>
       <artifactId>ecs</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.ibm.icu</groupId>
+      <artifactId>icu4j</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
